testsuite/typechecking/compile-fail/invalid-field-read.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class A { }
class Cell { value: A & iso; }

class Main
{
  read_from_missing_capability(cell: Cell) {
    // CHECK-L: invalid-field-read.verona:${LINE:-1}:3: error: Inference failed for method read_from_missing_capability
    cell.value;
  }

  main() { }
}
